# cosmicRays

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
cmake/: FindAST.cmake  FindCfitsio.cmake  FindFFTW.cmake  FindMinuit.cmake  FindNDARRAY.cmake
include/lsst/afw/image/python/: indexing.h
include/lsst/afw/math/: Background.h
include/lsst/afw/table/python/: catalog.h  columnView.h  sortedCatalog.h
include/lsst/base/: ModuleImporter.h
include/lsst/geom/: Extent.h
include/lsst/ip/isr/: isr.h
include/lsst/meas/algorithms/: CR.h
include/lsst/meas/base/: Algorithm.h
include/lsst/pex/exceptions/python/: Exception.h
include/lsst/sphgeom/: Angle.h
include/lsst/utils/: Utils.h  python.h
include/pybind/: afw_bind.h  base_bind.h  bind.h  daf_bind.h  geom_bind.h  ip_bind.h  meas_bind.h  pex_bind.h  sphgeom_bind.h  utils_bind.h
python/cosmicRays/: __init__.py  calibType.py  choiceField.py  configChoiceField.py  configurableField.py  convert.py  dateTime.py  defects.py  deprecated.py  detection.py  disableArithmetic.py  findCosmicRaysConfig.py  fitsIoWithOptions.py  imageContinued.py  isrFunctions.py  listField.py  maskContinued.py  overscan.py  pexConfig.py  propertyContainer.py  rangeField.py  slicing.py  subtractBackground.py  task.py  utils.py
src/afw/: fits.cc
src/afw/cameraGeom/: Camera.cc  Detector.cc  DetectorCollection.cc  TransformMap.cc
src/afw/detection/: Footprint.cc  GaussianPsf.cc  HeavyFootprint.cc  Psf.cc  Threshold.cc
src/afw/geom/: SkyWcs.cc  SpanSet.cc  Transform.cc
src/afw/geom/detail/: frameSetUtils.cc
src/afw/geom/polygon/: Polygon.cc
src/afw/image/: ApCorrMap.cc  CoaddInputs.cc  ExposureFitsReader.cc  ExposureInfo.cc  Filter.cc  FilterLabel.cc  Mask.cc  MaskedImage.cc  MaskedImageFitsReader.cc  PhotoCalib.cc  TransmissionCurve.cc  VisitInfo.cc
src/afw/math/: AnalyticKernel.cc  BoundedField.cc  ChebyshevBoundedField.cc  ConvolveImage.cc  DeltaFunctionKernel.cc  FixedKernel.cc  Function.cc  Kernel.cc  LeastSquares.cc  LinearCombinationKernel.cc  PixelAreaBoundedField.cc  ProductBoundedField.cc  SeparableKernel.cc  SpatialCell.cc  Stack.cc  TransformBoundedField.cc  minimize.cc  warpExposure.cc
src/afw/math/detail/: BasicConvolve.cc  ConvolveWithInterpolation.cc  KernelImagesForRegion.cc
src/afw/table/: Match.cc
src/afw/table/io/: FitsSchemaInputMapper.cc
src/daf/persistence/: LogicalLocation.cc
src/meas/algorithms/: CR.cc  CoaddBoundedField.cc  CoaddPsf.cc  DoubleGaussianPsf.cc  ImagePsf.cc  KernelPsf.cc  PcaPsf.cc  SingleGaussianPsf.cc
src/meas/base/: LocalBackground.cc  PsfFlux.cc
src/pybind/: afw_bind.cc  base_bind.cc  daf_bind.cc  geom_bind.cc  ip_bind.cc  pex_bind.cc  pybind.orig  pybind11.cc  sphgeom_bind.cc  utils_bind.cc
src/pybind/afw/: cameraGeom_bind.cc  coord_bind.cc  detection_bind.cc  display_bind.cc  fits_bind.cc  formatters_bind.cc  geom_bind.cc  image_bind.cc  math_bind.cc  table_bind.cc  typehandling_bind.cc
src/pybind/meas/: meas_alg_bind.cc  meas_base_bind.cc  meas_bind.cc
src/sphgeom/: Angle_sph.cc
